--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.8",
+    "react-email-validator": "^1.0.2",
     "react-lazy-load-image-component": "^1.5.6",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
